# knowledgeimporter

./: .gitignore  .project-tips  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES.md  Technisches Konzept Universeller Dokument-Konverter.md  pyproject.toml  tasks.md
.github/workflows/: build.yml
src/knowledgeimporter/: __init__.py  _version.py  app.py  main.py  requirements.txt
src/knowledgeimporter/converters/: __init__.py  base.py  csv_converter.py  json_converter.py  universal_converter.py  xlsx_converter.py  xml_converter.py  yaml_converter.py
src/knowledgeimporter/models/: config.py
src/knowledgeimporter/services/: converter.py  upload_service.py
src/knowledgeimporter/utils/: storage.py  upload_logger.py  worker.py
src/knowledgeimporter/views/: settings_view.py  upload_view.py
tests/: test_config.py  test_converter.py  test_storage.py  test_upload_logger.py  test_upload_service.py
tests/converters/: test_base.py  test_csv_converter.py  test_json_converter.py  test_universal_converter.py  test_xlsx_converter.py  test_xml_converter.py  test_yaml_converter.py
