[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledgeimporter"
dynamic = ["version"]
description = "Desktop app for batch-uploading Markdown, PDF, DOCX, HTML, and ODT files to LangDock Knowledge Folders"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Equitania Software GmbH", email = "info@equitania.de" },
]
keywords = [
    "langdock", "knowledge", "upload", "markdown", "pdf", "docx", "conversion", "flet", "desktop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "flet>=0.80.5",
    "eq-chatbot-core>=1.2.1",
    "keyring>=25.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "markitdown[pdf,docx]>=0.1.5",
    "odfdo>=3.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "ruff>=0.12.0",
]

[project.scripts]
knowledgeimporter = "knowledgeimporter.main:run"

[project.urls]
Homepage = "https://www.ownerp.com"
Repository = "https://github.com/equitania/knowledgeimporter.git"

[tool.hatch.version]
path = "src/knowledgeimporter/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledgeimporter"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["knowledgeimporter"]

[tool.ruff.format]
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"